--- a/buildahousesellahouse.shop/index.html
+++ b/buildahousesellahouse.shop/index.html
@@ -1,66 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Building a House</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background-color: #f2e2d8; /* Wood stain color */
-      color: #4e342e; /* Darker wood stain color */
-    }
+<title>Bloom into a New Home this Spring - Sell or Buy with Joy!</title>
+<style>
+  body {
+    background-color: #F0FFF0; /* Light green background for spring */
+    font-family: sans-serif;
+    text-align: center;
+  }
 
-    h1 {
-      text-align: center;
-      font-size: 3rem;
-    }
+  h1 {
+    color: #008000; /* Dark green for headings */
+    font-size: 48px;
+    margin-top: 50px;
+  }
 
-    p {
-      text-align: justify;
-      font-size: 1.5rem;
-      line-height: 1.5;
-    }
+  p {
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
 
-    .container {
-      width: 80%;
-      margin: 0 auto;
-      padding: 2rem;
-      border: 1px solid #4e342e;
-      border-radius: 10px;
-      background-color: #f5e9de; /* Lighter wood stain color */
-    }
+  a {
+    color: #336699; /* Blue for the link */
+    text-decoration: none;
+    font-weight: bold;
+  }
 
-    .steps {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-    }
+  .container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    border: 2px solid #90EE90; /* Light green border */
+    border-radius: 10px;
+  }
 
-    .steps li {
-      margin-bottom: 1rem;
-    }
-  </style>
+  .house-icon {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 20px;
+  }
+
+  .flower-border {
+    border: 3px solid #FFC125; /* Yellow border for spring accents */
+    border-radius: 10px;
+    padding: 20px;
+  }
+
+  .spring-flower {
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+  }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h1>Building and Selling a House</h1>
-
-    <p>Building a house is a dream for many people. It's a chance to create a space that is uniquely your own, where you can raise a family, entertain friends, and create lasting memories. But building a house can also be a daunting task. There are many factors to consider, from the design and materials to the financing and construction.</p>
-
-    <p>If you're thinking about building a house, there are a few things you should keep in mind. First, it's important to have a clear vision of what you want your house to look like and feel like. Consider your lifestyle, your needs, and your budget. Once you have a good idea of what you want, you can start to work on the design.</p>
-
-    <p>Next, you'll need to choose the right materials for your house. There are many different options available, so it's important to do your research and choose materials that are durable, sustainable, and aesthetically pleasing. You'll also need to consider the cost of materials.</p>
-
-    <p>Once you have a design and you've chosen your materials, you can start the construction process. This is a complex and often lengthy process, so it's important to find a qualified contractor who you can trust. Be sure to get multiple quotes and check references before hiring a contractor.</p>
-
-    <p>Building a house can be a rewarding experience, but it's important to be prepared for the challenges. It's a big investment, and it takes a lot of time and effort. But if you're willing to put in the work, you can create a home that you'll love for years to come.</p>
-
-    <ul class="steps">
-      <li>Define your vision and goals.</li>
-      <li>Create a detailed design.</li>
-      <li>Choose materials that are durable, sustainable, and aesthetically pleasing.</li>
-      <li>Find a qualified contractor.</li>
-      <li>Be prepared for the challenges.</li>
-    </ul>
+  <div class="container flower-border">
+    <h1>Bloom into a New Home this Spring!</h1>
+    <p>Let the season of fresh starts inspire your real estate journey!</p>
+    <div class="house-icon">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 8h14v12H5z" fill="currentColor"></path><path d="M19 7h4v2h-4zm0-4h4v2h-4zm0 8h4v2h-4z" fill="currentColor"></path><path d="M15 7h4v10h-4zm0-6h4v2h-4z" fill="currentColor"></path></svg>
+    </div>
+    <div class="spring-flower">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="#FFC125" d="M256 304c-8.822 0-16 7.178-16 16s7.178 16 16 16 16-7.178 16-16-7.178-16-16-16zm0 96c-8.822 0-16 7.178-16 16s7.178 16 16 16 16-7.178 16-16-7.178-16-16-16zm0 96c-8.822 0-16 7.178-16 16s7.178 16 16 16 16-7.178 16-16-7.178-16-16-16z"/></svg>
+    </div>
+    <p>Whether you're ready to sell your current home and embrace a fresh start, or seeking to find your dream haven amidst blooming gardens, this spring is the perfect time to make your move! Our dedicated team is here to guide you every step of the way, making the process as smooth and joyful as a season awakening.</p>
+    <p>Explore your options and take the first step towards your real estate goals this spring - <a href="#">Contact our team today!</a></p>
   </div>
 </body>
 </html>
