--- a/cleaningsupplies.xyz/index.html
+++ b/cleaningsupplies.xyz/index.html
@@ -1,57 +1,79 @@
 <!DOCTYPE html>
-
-<html
- 
-lang="en">
-
+<html lang="en">
 <head>
-
-  
-<meta
- 
-charset="UTF-8">
-
-  
-<meta
- 
-name="viewport"
- 
-content="width=device-width, initial-scale=1.0">
-
-  
-<title>Fortnite</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blossom into Brightness: Your Spring Cleaning Springboard</title>
   <style>
     body {
-      background-color: #007bff;
-      color: #fff;
-      font-family: sans-serif;
+      font-family: Arial, sans-serif;
+      background-color: #f8f8f8;
+      color: #333;
+      margin: 0;
+      padding: 0;
     }
 
     h1 {
       text-align: center;
-      font-size: 48px;
-      margin-top: 20px;
-      margin-bottom: 20px;
+      font-size: 2rem;
+      padding: 1rem;
+      margin: 0;
+      border-bottom: 1px solid #ddd;
+      background-color: #f5f5f5;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
 
-    p {
-      text-align: center;
-      font-size: 16px;
-      margin-top: 20px;
-      margin-bottom: 20px;
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 1rem;
+    }
+
+    .supplies {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .supplies li {
+      margin: 0.5rem 0;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      background-color: #f5f5f5;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    }
+
+    .supplies li:hover {
+      background-color: #fafafa;
     }
 
     a {
-      color: #fff;
+      color: #288d90;
       text-decoration: none;
+    }
+
+    .floral-border {
+      border-top: 5px solid #f1828d;
+      border-bottom: 5px solid #e5c080;
+      padding: 0.5rem;
+      margin: 1rem 0;
     }
   </style>
 </head>
 <body>
-  <h1>Fortnite</h1>
-  <p>Fortnite is a battle royale game developed by Epic Games. It was released in 2017 and has since become one of the most popular games in the world. The game is free to play, but players can purchase in-game items such as cosmetics and characters.</p>
-  <p>In Fortnite, players are dropped onto an island with 99 other players. The goal of the game is to be the last player standing. Players can eliminate other players by shooting them with weapons or by building structures to trap them. The game also features a number of different game modes, such as Team Rumble and Creative.</p>
-  <p>Fortnite is a fun and exciting game that can be enjoyed by players of all ages. If you're looking for a new game to play, I highly recommend checking out Fortnite.</p>
-  <a href="https://www.epicgames.com/fortnite/">Play Fortnite</a>
+  <h1>Blossom into Brightness: Your Spring Cleaning Springboard</h1>
+  <div class="container">
+    <p>Winter's cloak has lifted, spring's symphony plays! As nature bursts with colour, let's echo the vibrancy inside. Grab your cleaning tools, put on your sunshine smile, and prepare to **blossom into brightness**. This spring cleaning isn't just about tidying – it's a dance with renewal, a waltz with freshness.</p>
+    <ul class="supplies">
+      <li>A gentle spritz of all-purpose cleaner to dust away winter's slumber.</li>
+      <li>Microfiber cloths, soft as butterfly wings, to polish to a sparkling glow.</li>
+      <li>Natural disinfectants, like a breath of spring air, to banish hidden nasties.</li>
+      <li>Baking soda and vinegar, nature's dynamic duo, to tackle stubborn stains with glee.</li>
+      <li>Essential oils like lemongrass or geranium, a fragrant springtime serenade, to linger in the air.</li>
+    </ul>
+    <div class="floral-border"></div>
+    <p>Turn spring cleaning into a joyful celebration! Put on your favourite tunes, let sunlight stream through your windows, and make it a playful, blossoming ritual. For more eco-friendly inspiration, peek at Green Queen's garden of cleaning tips: <a href="https://www.greenqueen.com/spring-cleaning-tips/">Green Queen's guide</a></p>
+  </div>
 </body>
 </html>
