--- a/ocmbocestech.online/index.html
+++ b/ocmbocestech.online/index.html
@@ -1,83 +1,81 @@
 <!DOCTYPE html>
-
-<html
- 
-lang="en">
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Technology Blooms in Spring</title>
+    <style>
+        body {
+            background-color: #f0f8ff; /* Light blue background */
+            font-family: sans-serif;
+            text-align: center;
+        }
 
-  
-<meta
- 
-charset="UTF-8">
+        header {
+            padding: 30px;
+            background-color: #4CAF50; /* Green header */
+            color: white;
+        }
 
-  
-<meta
- 
-name="viewport"
- 
-content="width=device-width, initial-scale=1.0">
+        h1 {
+            font-size: 40px;
+            margin-bottom: 20px;
+        }
 
-  
-<title>Basketball</title>
+        .content {
+            padding: 50px;
+        }
 
-  
-<link
- 
-rel="stylesheet" href="style.css">
+        .flower-icon {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            background-color: #ffd700; /* Yellow flower icon */
+            margin: 0 auto;
+            position: relative;
+        }
+
+        .flower-icon:before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 0;
+            height: 0;
+            border-left: 15px solid transparent;
+            border-right: 15px solid transparent;
+            border-bottom: 40px solid #ffd700; /* Yellow petal */
+        }
+
+        .flower-icon:after {
+            content: "";
+            position: absolute;
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 0;
+            height: 0;
+            border-left: 15px solid transparent;
+            border-right: 15px solid transparent;
+            border-top: 40px solid #ffd700; /* Yellow petal */
+        }
+
+        a {
+            color: #4CAF50; /* Green link color */
+            text-decoration: none;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Basketball</h1>
-  </header>
-
-  <main>
-    <h2>The Thrill of the Game</h2>
-    <p>Basketball is a fast-paced, exciting sport that is loved by millions around the world. It is a game of skill, athleticism, and teamwork. Whether you are a fan, a player, or just someone who enjoys watching a good game, basketball is sure to get your heart racing.</p>
-
-    <p>One of the things that makes basketball so exciting is its unpredictability. On any given night, any team can beat any other team. This is because the game is so dependent on individual performance. A single player can have a hot hand and score a lot of points, or they can have a cold night and struggle to score. This makes for some truly nail-biting finishes.</p>
-
-    <p>Another thing that makes basketball so popular is its accessibility. All you need to play is a ball and a hoop. You can play basketball anywhere, from your driveway to a packed arena. This makes it a great sport for people of all ages and skill levels.</p>
-
-    <p>So if you are looking for a sport that is exciting, challenging, and fun, then basketball is the perfect sport for you.</p>
-  </main>
-
-  <footer>
-    <p>&copy; 2023 Basketball Fan</p>
-  </footer>
+    <header>
+        <h1>Technology Blooms in Spring</h1>
+    </header>
+    <div class="content">
+        <div class="flower-icon"></div>
+        <p>Explore the latest technological advancements that are blossoming this season!</p>
+        <a href="https://www.example.com/tech-news">Discover more</a>
+    </div>
 </body>
 </html>
-Use code with caution. Learn more
-CSS
-body {
-  background-color: #f0f8ff;
-  font-family: sans-serif;
-}
-
-header {
-  background-color: #007bff;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
-}
-
-h1 {
-  font-size: 24px;
-  font-weight: bold;
-}
-
-main {
-  padding: 20px;
-}
-
-p {
-  font-size: 16px;
-  line-height: 1.5;
-}
-
-footer {
-  background-color: #007bff;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
-}
